# Integradora2

./: CMakeLists.txt  FordFulkersonLib.cpp  KruskalLib.cpp  NearestCentralLib.cpp  TravelingLib.cpp  main  main.cpp  sonar-project.properties
.github/workflows/: build.yml
Docs/: team.txt
include/: FordFulkersonLib.h  KruskalLib.h  NearestCentralLib.h  TravelingLib.h
src/: FordFulkersonLib.cpp  KruskalLib.cpp  NearestCentralLib.cpp  TravelingLib.cpp  main.cpp
tests/: ford_fulkerson.cpp  kruskal.cpp  main_test.cpp  nearest_central.cpp  traveling.cpp
